Save/Update files [ci skip]

--- a/source/localisation/domination_l_english.yml
+++ b/source/localisation/domination_l_english.yml
@@ -210,10 +210,10 @@
  flavor_fra.109.b:0 "共通の敵を前にして我らは団結する！"
  flavor_fra.109.c:0 "イタリアは我らのものだ！"
  flavor_fra.113.t:0 "ナポリの運命"
- flavor_fra.113.d:0 "フランス王がナポリ王をも兼任するという外交的に大胆な動きは見過ごしえないものだ。 海外で騒がれているが、あくまで我らは内に目を向け、新たに獲得された土地を同支配するか決める必要がある。 ナポリの貿易港だけでも、ジェノバの交易へのアクセスを獲得するための重要な要素になる可能性があるため、慎重を期してその動きを見極めなければならない。"
- flavor_fra.113.a:0 "フランスの対等な領邦になるだろう！"
+ flavor_fra.113.d:0 "我らが国家元首がナポリ王をも兼ねるという大胆な動きは、見過ごしえないものだ。海外で騒がれているが、あくまで我らは内に目を向け、新たに獲得した領土をどう支配するか決める必要がある。この地は広大なだけでなく、大変豊かでもある。貿易港ナポリひとつとってみても、ジェノバ市場へアクセスするための拠点港になる可能性があるため、慎重を期してその動きを見極めなければならない。"
+ flavor_fra.113.a:0 "フランスの対等な領邦だ！"
  flavor_fra.113.b:0 "我らに従うために彼らは存在する！"
- flavor_fra.113.c:0 "かつての支配者の弱さを攻撃すべきだ！"
+ flavor_fra.113.c:0 "かつての宗主国様の弱点につけこむべきだ！"
  flavor_fra.114.t:0 "フランス＝イベリア戦争における勝利"
  flavor_fra.114.d:0 "かつて欧州の耳目を集めたイベリア半島の支配者は大きな影響力と権力を持っていたが、その力の強さにもかかわらず、彼らもまた、我々の旗の下にヨーロッパを統一するという我々の軍事的・拡張的野望の犠牲となった。"
  flavor_fra.114.a:0 "イベリアは我が手にある！"
@@ -251,7 +251,7 @@
  flavor_fra.201.d:0 "ついに現代の伝説の時代の中で正統なる場所を手に入れました。かつて奪われた王位が今、正当な所有者であるフランス王家のもとに戻ってきたのです！前任者とは違い、帝国を維持し、その多様な住民を保護する責務を怠ることはないでしょう！"
  flavor_fra.201.a:0 "我らこそ帝国の盾なり！"
  flavor_fra.202.t:0 "トゥーロン造船所のラド"
- flavor_fra.202.d:0 "ラドの語源は、古英語の「ロード」という言葉から来ていて、「海岸近くの保護された場所で、港として閉ざされすぎず、船舶が停泊できる」ことを意味しています。トゥーロンのラドは、地中海で最も優れた天然の停泊地の一つで、ヨーロッパ最大のラドです。それは ジャン半島とサン＝マンドリエ＝シュル＝メール半島によって海から守られ、15世紀以降、軍港として使用されてきました。 ラドは、サン＝マンドリエ＝シュル＝メール港、ラ・セーヌ＝シュル＝メール港、そしてアーセナル、つまりトゥーロンの軍港と商港を保護しています。\n\nこの港の近世史は、[GetYear]年に[Root.Monarch.GetName]がトゥーロンにトゥール・ロワイヤルを建設したことから始まります。海軍工廠と造船所が同時に建設され、数年後には風と海から船舶を守るために建造された小さな避難港、ヴェイユ・ダルスが建設されました。この造船所は、プロヴァンスを地中海の海軍大国にすることを望んだ後の枢機卿によって大拡張されました。"
+ flavor_fra.202.d:0 "ラドの語源は、古英語の「ロード」という言葉から来ていて、「海岸近くの保護された場所で、港として閉ざされすぎず、船舶が停泊できる」ことを意味しています。トゥーロンのラドは、地中海で最も優れた天然の停泊地の一つで、ヨーロッパ最大のラドです。それは ジャン半島とサン＝マンドリエ＝シュル＝メール半島によって海から守られ、15世紀以降、軍港として使用されてきました。ラドは、サン＝マンドリエ＝シュル＝メール港、ラ・セーヌ＝シュル＝メール港、そしてアーセナル、つまりトゥーロンの軍港と商港を保護しています。\n\nこの港の近世史は、[GetYear]年に[Root.Monarch.GetName]がトゥーロンにトゥール・ロワイヤルを建設したことから始まります。海軍工廠と造船所が同時に建設され、数年後には風と海から船舶を守るために建造された小さな避難港、ヴェイユ・ダルスが建設されました。この造船所は、プロヴァンスを地中海の海軍大国にすることを望んだ後の枢機卿によって大拡張されました。"
  flavor_fra.202.a:0 "建てよう！"
  flavor_fra.203.t:0 "フランス諸島"
  flavor_fra.203.d:0 "最大の敵であったブリテン諸島の王家は滅亡しました。代わりに、彼らは崩壊した経済、頭を失い導く声もなく路頭に迷う民衆を残していきました。宿敵関係だったとはいえ、彼らを自国の政権内に組み込むことを検討することは賢明でしょう。あるいは、自国の規則や慣習に従うよう強制する権利も持っています。"
@@ -402,7 +402,7 @@
  fra_if_bur_subject_and_emperor_dlc_tt:2 "\n@BUR ブルゴーニュが§Y非プレイヤー§!従属国である状態でミッションを達成した場合："
  fra_alternatively_10_dev_spread_and_tt:0 "\nもしくは、£adm££dip££mil£の開発度§G10§!分が§Yブルゴーニュ§!の州にも分配されます："
  fra_alternatively_10_dev_spread_and_2tt:0 "\n£adm££dip££mil£の開発度§G10§!分が§Yブルゴーニュ§!の州にも分配されます："
- fra_complete_via_opinion_alliance_and_trust_tt:1 "\n最後に、もし@BUR ブルゴーニュ王家と外交評価や同盟によってミッションを達成した場合、帝国事件§Yブルゴーニュ継承§!が発生した際に彼らが自国側につく可能性が高くなります。 "
+ fra_complete_via_opinion_alliance_and_trust_tt:1 "\n最後に、もし@BUR ブルゴーニュ王家との外交評価や同盟によってミッションを達成した場合、帝国事件§Yブルゴーニュ継承§!が発生した際に彼らが自国側につく可能性が高くなります。"
  fra_enable_war_on_the_empire_cb_tt:0 "帝国領を§Y少ないコスト§!で征服できる開戦事由§Y対帝国戦争§!が使用可能になります"
  fra_if_completed_via_control_tt:1 "戦争時に州を§G占領中§!にミッションをクリアした場合、和平交渉での要求戦勝点コストが非常に安くなります"
  fra_alternatively_lose_10_devastation_and_gain_tt:0 "\n代わりに、平時にミッションを達成した場合、両州とも荒廃が§G10§!減少すると共に以下を獲得します："
@@ -702,7 +702,7 @@
  as_long_as_we_stay_allies_desc:0 "同盟を続けている限り"
  mng_5_mandate_per_ally_tt:0 "§Y同盟§!1ヶ国につき帝国の天命を§Y5§!獲得する"
  mng_25_mp_per_ally_tt:0 "§Y同盟§!1ヶ国につき§Y25§! £adm£ £dip£ £mil£ を獲得する"
- mng_all_hordes_pacified_tt:1 "隣接する全遊牧民：\n自国と以下の条件のいずれかを満たす：\n同盟国もしくは従属国である\n以下の条件のいずれかを満たす：\n - 独立欲求が25%未満である\n - 朝貢のインタラクションで貢物を受けたことがある\n - 自国への外交評価が150以上である"
+ mng_all_hordes_pacified_tt:1 "隣接する全遊牧民：\n自国と以下の条件のいずれかを満たす：\n同盟国もしくは従属国\n以下の条件のいずれかを満たす：\n - 独立欲求が25%未満である\n - 朝貢相互作用で貢物を受けたことがある\n - 自国への外交評価が150以上である"
  mng_if_completed_via_diplomacy_tt:0 "外交によってミッションを完了した場合："
  mng_if_completed_via_conquest_tt:0 "\nあるいは、征服によってミッションを完了した場合："
  mng_enable_tribes_estate_tt:0 "§Y部族§!階級を有効化"
@@ -763,7 +763,7 @@
  estate_disasters.19.a.tt:0 "\nこれは偉大なる[Root.GetName]の終わりなのだろうか？"
  mng_circumnavigate_bonus_tt:0 "\n初めて世界一周することで、革新性を§G5§!獲得します"
  mng_every_sieged_province_rebels_10_mandate_lost_tt:0 "\nこれらの反乱軍によって包囲された州すべてで天命が§R-10§!減少"
- mng_reduce_all_subjects_we_interacted_with_ld_tt:0 "自国が外交行動「§Y贈り物を送る§!」や朝貢インタラクションの「§Y贈り物を授ける§!」を使用した従属国の独立欲求が§G-10§!減少します"
+ mng_reduce_all_subjects_we_interacted_with_ld_tt:0 "自国が外交行動「§Y贈り物を送る§!」や朝貢相互作用の「§Y贈り物を授ける§!」を使用した従属国の独立欲求が§G-10§!"
  mng_worsen_ld_subjects_tt:0 "全ての従属国の独立欲求が§R20§!増加"
  has_built_forbidden_city_tt:0 "国家の決断「§Y紫禁城の建設§!」を制定している"
  mng_insight_28_tt:0 "\n§Gイベントインサイト§!：\nこのイベントでは、統治の三つの分野の内の一つを推奨することで、宮廷の行動の決定を選択する機会を与えてくれます。"
@@ -1664,7 +1664,7 @@
  earlier_coal_available_tt:0 "制度§Y工場§! を受容し、統治技術が§Y23§!に達している場合、§Y石炭§!利用可能です。"
  enable_full_ducat_gain_from_selling_crownland_tt:0 "§Y称号の売却§!は、時代ごとに価値が下がることはありません。"
  can_sell_crownland_to_estates_targeted_tt:0 "§Y称号の売却§!は、階級を対象に取ることができるようになりました。"
- can_seize_crownland_to_estates_targeted_tt:0 "§Y領地の没収§!は、階級を対象に取ることができるようになりました。"
+ can_seize_crownland_to_estates_targeted_tt:0 "§Y領地の接収§!は、階級を対象に取ることができるようになりました。"
  half_estate_privilege_absolutism_loss_tt:0 "階級特権による絶対主義喪失の最大値を§G-50.0§!（切り捨て）"
  create_leader_scaling_with_tradition_tt:1 "§Y伝統に比例§!"
  trade_goods_selection_string:0 "§Y[This.GetName]§!による支払い"
@@ -2066,7 +2066,7 @@
  enforced_autocracy_reform:0 "強制的独裁政治"
  enforced_autocracy_reform_desc:1 "皇帝の統治は絶対的であり、誰も代わりえない。階級や他の機関は皇帝に紐づく。"
  mechanic_can_sell_crownland_to_single_estates_yes:0 "特定の階級に称号を売却できます"
- mechanic_can_seize_crownland_of_single_estates_yes:0 "特定の階級から領地を没収できます"
+ mechanic_can_seize_crownland_of_single_estates_yes:0 "特定の階級から領地を接収できます"
  holy_synod_reform:0 "聖務会院"
  holy_synod_reform_desc:0 "総主教の権力はあまりにも長い間皇帝から独立した。聖務会院を設立することで、教会に関する事柄は今や国家の問題となり、総主教座は事実上廃止された。"
  strengthened_the_patriarchy_reform:0 "強化された主教"
@@ -2266,8 +2266,8 @@
  current_term_tt:0 "§Y[Root.Monarch.GetName]§!の現在の任期：§Y[Root.election_term.GetValue]§!/§Y[Root.max_election_term.GetValue]§!"
  estate_special:0 "内部構造"
  mechanic_cheaper_streltsy_yes:0 "§Yストレリツィ§!が統治者交代のたびに要求するダカットが§G-25%§!"
- mechanic_buffed_streltsy_button_yes:0 "§Yストレリツィの配備§!の政府能力使用時に、§Yストレリツィ§!の補充コストを§G-10%§!減らし、補充速度を§G+10.0%§!増加させることができるようになる。"
- mechanic_new_order_regiment_buff_yes:1 "§Y新騎士団連隊の動員§!インタラクションは、§Y10年間§!歩兵の戦闘能力を§G+15.0%§!します"
+ mechanic_buffed_streltsy_button_yes:0 "相互作用§Yストレリツィの配備§!使用時に、§Yストレリツィ§!の補充コストを§G-10%§!減らし、補充速度を§G+10.0%§!増加させることができるようになる。"
+ mechanic_new_order_regiment_buff_yes:1 "相互作用§Y新騎士団連隊の動員§!は、§Y10年間§!歩兵の戦闘能力を§G+15.0%§!します"
  mechanic_has_weaker_harem_events_yes:0 "§Y継承の確保§!を有している"
  mechanic_manpower_sailors_on_build_yes:0 "§Y兵舎§!、§Y訓練場§!、§Yドック§!、および§Y乾ドック§!を建造すると、人的資源§G1000§!もしくは水兵§G200§!を獲得します。"
  mechanic_is_peasants_republic_yes:0 "§Y農民共和制§!である"
@@ -2681,7 +2681,7 @@
  flavor_tur.202.b:0 "現状を維持する"
  flavor_tur.202.c:0 "交易協定を終わりにする"
  flavor_tur.203.t:0 "ヴァルナ十字軍への勝利"
- flavor_tur.203.desc:0 "ヴァルナの戦いでキリスト教徒が破れ、再びバルカン半島に平和が訪れました。我がスルタン最愛の父であるムラドは、 この侵略者から守るため息子の参戦要請に応えました。彼は大勝利しましたが、その代償は決して小さなものではありませんでした。戦闘での死傷者は両軍とも多く、自国の兵たちは受けた被害から回復するのに時間が必要となるでしょう。しかし、キリスト教徒側といえば、ポーランド、ハンガリー、リトアニアのヴワディスワフ3世が戦死しており、はるかに悪い状況で戦闘を終えています。ポーランドもハンガリーも空位による混乱期を迎えています。インシャ・アッラー、彼らの不幸は続くことでしょう。この勝利は、ヨーロッパ及びキリスト教圏を根底から揺るがし、崇高なるオスマン帝国の力を前に、全ての者たちがその脅威に震え上がっています。バルカン半島を席巻する我々に対して、誰もが指をくわえて見ているだけで、手を出せる者はいないでしょう。セルビアは我々のものです。ワラキアは我々のものです。アルバニア人は跪き、スカンデルベグは犬のように殺されることでしょう。そして、最高の賞品、コンスタンティノープルも我々のものなのです。"
+ flavor_tur.203.desc:0 "ヴァルナの戦いでキリスト教徒が破れ、再びバルカン半島に平和が訪れました。我がスルタン最愛の父であるムラドは、この侵略者から守るため息子の参戦要請に応えました。彼は大勝利しましたが、その代償は決して小さなものではありませんでした。戦闘での死傷者は両軍とも多く、自国の兵たちは受けた被害から回復するのに時間が必要となるでしょう。しかし、キリスト教徒側は、ポーランド、ハンガリー、リトアニアの王たるヴワディスワフ3世が戦死しており、はるかに悪い状況で戦闘を終えています。ポーランドもハンガリーも空位による混乱期を迎えています。インシャ・アッラー、彼らの不幸は続くことでしょう。この勝利は、ヨーロッパ及びキリスト教圏を根底から揺るがし、崇高なるオスマン帝国の力を前に、全ての者たちがその脅威に震え上がっています。バルカン半島を席巻する我々に対して、誰もが指をくわえて見ているだけで、手を出せる者はいないでしょう。セルビアは我々のものです。ワラキアは我々のものです。アルバニア人は跪き、スカンデルベグは犬のように殺されることでしょう。そして、最高の賞品、コンスタンティノープルも我々のものなのです。"
  flavor_tur.203.a:0 "賽は投げられた..."
  flavor_tur.204.t:0 "攻城技師ウルバン"
  flavor_tur.204.desc:1 "ウルバンは、ハンガリーのブラッョー州出身の鋳鉄製造者であり技師でした。攻城術や大砲製造の先駆者の一人として、戦争用の武器で生計を立てていました。[GetYear]年、ウルバンはビザンツ皇帝の下で一旗揚げようとしましたが、皇帝は彼が必要とする給料も大砲を作るのに必要な材料も用意できませんでした。そのため、ウルバンはオスマンのスルタン、[Root.Monarch.GetName][Root.Monarch.GetTitle]への転身を余儀なくされます。彼は、「バビロンの城壁」をも吹き飛ばすに十分な大きさと威力を有する大砲の製作について約束しました。"
@@ -2804,7 +2804,7 @@
  flavor_tur.230.a:0 "何とも皮肉な展開だ。"
  tur_non_muslim_path_tt:0 "§Y宗教§!ミッションルートが解禁されます。"
  flavor_tur.231.t:0 "[Root.Monarch.Dynasty.GetName]家の勝利"
- flavor_tur.231.desc:0 "「美しい、涙が出るほど美しい。ああ、涙が出る！我が帝国がこれほど栄えるとは。我が軍はアナトリア全土を屈服させ、卑小なるベイも白羊朝も跪かせた。アルメニア人も、クルド人も、ポントス人も、 余をスルタンと呼んでいる。全能なる神は、余がこれほど広大で偉大な土地を治めることができるよう、どれほど祝福してくださったことだろう。オスマンのガジ（戦士）御自身が、余の手に御自分の遺産が安全に守られていることを知りながら、余を見下ろしているに違いない。そう思うと胸が高鳴る」\n- [Root.Monarch.GetTitle] [Root.Monarch.GetName]"
+ flavor_tur.231.desc:0 "「美しい、涙が出るほど美しい。ああ、涙が出る！我が帝国がこれほど栄えるとは。我が軍はアナトリア全土を屈服させ、卑小なるベイも白羊朝も跪かせた。アルメニア人も、クルド人も、ポントス人も、余をスルタンと呼んでいる。全能なる神は、余がこれほど広大で偉大な土地を治めることができるよう、どれほど祝福してくださったことだろう。オスマンのガジ（戦士）御自身が、余の手に御自分の遺産が安全に守られていることを知りながら、余を見下ろしているに違いない。そう思うと胸が高鳴る」\n- [Root.Monarch.GetTitle] [Root.Monarch.GetName]"
  flavor_tur.231.a:0 "祝いの日だ！"
  flavor_tur.232.t:0 "コプト正教会"
  flavor_tur.232.desc:0 "コプト教会とその信者たちは何世紀にもわたってコーカサス地方に居住してきました。この山岳地帯の人々を抑えようと征服者たちがこぞって参戦したことで、戦争と飢饉がこの地方を荒廃させました。しかし、今やこの山々自体が私たちの前で震え、分裂したキリスト教の王国と部族は自国の勢力圏内にあります。"
@@ -2912,7 +2912,7 @@
  flavor_tur.260.desc:0 "我らが[Root.GovernmentName]は、他国が夢見ることしかできない国境に達している。どの地図上でも本当に美しいが、我が帝国の範囲は、国家の多くの州やエヤレトを管理しなければならない官僚にとっては魅力的なものでは決してない。\n[Root.Monarch.GetTitle]、[Root.Monarch.GetName]は、[Root.GetUsableName]が自らの成功の犠牲になる前に対抗することを決定した。行政や官僚制に関する一連の抜本的な改革を通じ、[Root.GetUsableName]は組織力の上昇を経験している。"
  flavor_tur.260.a:0 "官僚主義がスピードを落とす理由になってはならない！"
  flavor_tur.261.t:0 "イェニチェリが特権を要求"
- flavor_tur.261.desc:0 "不満を募らせたイェニチェリがスルタンの私室に向かった。彼らは剣に手をかけ、他の国々が特権を享受しているのと同じように、自分たちにも正当な王室特権があることを要求している。彼らの宣言文によれば、スルタンで最も栄誉ある軍隊が、 小貴族や商人たちに劣等感を抱かされることは、 考えられないことだ！という。彼らは、現在のイェニチェリ法の一つを緩和し、イェニチェリの生活にふさわしい特権に置き換えることを期待している。"
+ flavor_tur.261.desc:0 "不満を募らせたイェニチェリがスルタンの私室に向かった。彼らは剣に手をかけ、他の国々が特権を享受しているのと同じように、自分たちにも正当な王室特権があることを要求している。彼らの宣言文によれば、スルタンの最も栄誉ある軍隊が、小貴族や商人たちに劣等感を抱かされることは、考えられないことだ！という。彼らは、現在のイェニチェリ法の一つを緩和し、イェニチェリの生活にふさわしい特権に置き換えることを期待している。"
  flavor_tur.261.a:0 "彼らにアガの任命権を与える。"
  flavor_tur.261.b:0 "イェニチェリ階級を世襲制にしよう。"
  flavor_tur.261.c:0 "副業を持つ権利を与えよう。"
@@ -3031,7 +3031,7 @@
  flavor_tur.290.a:0 "我が帝国はもはや相反する法律の寄せ集めではない。"
  flavor_tur.290.b:0 "OK"
  flavor_tur.292.t:0 "イェニチェリが特権を要求"
- flavor_tur.292.desc:0 "不満を募らせたイェニチェリがスルタンの私室に向かった。彼らは剣に手をかけ、他の国々が特権を享受しているのと同じように、自分たちにも正当な王室特権があることを要求している。彼らの宣言文によれば、スルタンで最も栄誉ある軍隊が、 小貴族や商人たちに劣等感を抱かされることは、 考えられないことだ！という。"
+ flavor_tur.292.desc:0 "不満を募らせたイェニチェリがスルタンの私室に向かった。彼らは剣に手をかけ、他の国々が特権を享受しているのと同じように、自分たちにも正当な王室特権があることを要求している。彼らの宣言文によれば、スルタンの最も栄誉ある軍隊が、小貴族や商人たちに劣等感を抱かされることは、考えられないことだ！という。"
  flavor_tur.293.t:0 "イェニチェリの台頭"
  flavor_tur.293.desc:0 "わが軍がイェニチェリへの依存度を高めるにつれて、わが国におけるイェニチェリの権力も高まっている。政府と軍事システムに対する彼らの影響力と重要性は、もはや議論の余地がない。イェニチェリはその重要性を認識しているが、彼らの一般的な態度は現在[Root.Monarch.GetTitle][Root.Monarch.GetName]を支持しており、そのためイェニチェリは不敗の前衛として我々に仕えることに同意している。"
  flavor_tur.293.a:0 "素晴らしい。"
@@ -3403,7 +3403,7 @@
  steal_modern_ideas_tooltip:0 "我が国の近代化プロセスを加速するために対象国からアイデアを盗みます。"
  request_access_to_modern_ideas:0 "近代アイデアを購入"
  request_access_to_modern_ideas_title:0 "近代アイデアを購入"
- request_access_to_modern_ideas_desc:0 "我が国の§Y近代化§!を§G[Root.GetModernizationGain]§!進めるために§R3ヵ月分§!の収入を§Y[From.GetName]§!に支払います。 \n\n§Y[Root.GetName]と[From.GetName]の技術レベルを比較し、最大で5.0の近代化を獲得します。§!"
+ request_access_to_modern_ideas_desc:0 "我が国の§Y近代化§!を§G[Root.GetModernizationGain]§!進めるために§R3ヵ月分§!の収入を§Y[From.GetName]§!に支払います。\n\n§Y[Root.GetName]と[From.GetName]の技術レベルを比較し、最大で5.0の近代化を獲得します。§!"
  request_access_to_modern_ideas_tooltip:0 "我が国の近代化プロセスを加速するために対象国からアイデアを購入します。"
  request_access_to_modern_ideas_alert_tooltip:0 "§Y近代アイデア§!購入の要請"
  request_access_to_modern_ideas_dialog:0 "[This.GetName]は、[This.GetAdjective]の収入の§Y3ヶ月分§!の金銭的貢献と引き換えに、我々の知識と文化的進歩の秘密を要求しています。"
@@ -3944,7 +3944,7 @@
  janissary_coup_events.3.desc:0 "イェニチェリの反乱者たちはバルカン領全域で大挙して押し寄せているようです。飢えた狼のように、彼らは神自身から正当に授けられた王位を簒奪しようと企ててスルタン相手に武器を取っています！"
  janissary_coup_events.3.a:0 "鞭を取ってこい！"
  janissary_coup_events.4.t:0 "アナトリア領での反乱"
- janissary_coup_events.4.desc:0 "イェニチェリの反乱軍が、我がアナトリア領に大挙して押し寄せているようだ。飢えた狼のように、スルタンに対して武器を取り、 神から正当に授けられた王位を簒奪しようとする卑劣な試みである！"
+ janissary_coup_events.4.desc:0 "イェニチェリの反乱軍が、我がアナトリア領に大挙して押し寄せているようだ。飢えた狼のように、スルタンに対して武器を取り、神から正当に授けられた王位を簒奪しようとする卑劣な試みである！"
  janissary_coup_events.4.a:0 "アッラーに誓って、彼らは私の靴を味わうことになるだろう！"
  janissary_coup_events.5.t:0 "バルカンとアナトリアでの反乱"
  janissary_coup_events.5.desc:0 "イェニチェリの反乱者たちは互いに連携し、今度は新たな大胆な戦略を試みました。彼らは同時にバルカン領とアナトリア領で集結しているのです。もはや飢えなどではなく、これらの狼たちは帝国自体を終わらせ、かれらを自身の子供のように扱ってきたスルタンを無理矢理取って代わろうとしています！"
@@ -4047,7 +4047,7 @@
  plot_of_the_harem_events.1.a:0 "己のハレムに束縛されるとは、なんたる屈辱よ..."
  plot_of_the_harem_events.1.a.tt:0 "この国難が有効である限り、§Yハレム§!のイベントは無効になる。"
  plot_of_the_harem_events.2.t:0 "ハレムの策謀の終焉"
- plot_of_the_harem_events.2.desc:0 "ハレムの影響力はもうない。一連の改革、恩寵、内部の陰謀によって、ハレムは抑制された。宦官、妾、そしてヴァリデ・スルタン自身は、 政府の業務から排除され、 強力な指導者が統治するという掟が再び施行された。新たなスルタンが、自らのハレムの奴隷となることは二度とない。"
+ plot_of_the_harem_events.2.desc:0 "ハレムの影響力はもうない。一連の改革、恩寵、内部の陰謀によって、ハレムは抑制された。宦官、妾、そしてヴァリデ・スルタン自身は、政府の業務から排除され、強力な指導者が統治するという掟が再び施行された。新たなスルタンが、自らのハレムの奴隷となることは二度とない。"
  plot_of_the_harem_events.2.a:0 "ようやく終わった。"
  plot_of_the_harem_events.3.t:0 "僭称者が[tur_pretender_province.GetName]で蜂起"
  plot_of_the_harem_events.3.desc.son:0 "[Root.tur_pretender.GetName]は[Root.Monarch.GetName]の息子で、母親と一緒に悪党になった。彼は父の力が弱すぎると考え、簒奪を狙っている。彼は[tur_pretender_province.GetName]の州に軍隊を集め、親愛なる母親の指導の下、自分の血族に対して公然と反乱を起こしている。"
@@ -4180,7 +4180,7 @@
  promote_sojunghwa_decision_title:0 "小中華思想の推進"
  promote_sojunghwa_decision_desc:0 "中華帝国は小蛮族の手に落ちた！獰猛な遊牧民が中国の中心地を征服したことで、天命のまさに概念自体が崩壊した。\n正統な中国領を継承するかどうかは[Root.GetUsableName]次第である。"
  sojunghwa:0 "小中華思想"
- desc_sojunghwa:0 "小中華思想(「小さな中国」)は自国の中核的信条だ。過去の天朝は蛮族の手に落ち、その遺産を継承するかどうかは現在自国次第である。"
+ desc_sojunghwa:0 "小中華思想（「小さな中国」）は自国の中核的信条だ。過去の天朝は蛮族の手に落ち、その遺産を継承するかどうかは現在自国次第である。"
  mos_the_civil_war_title:0 "モスクワ内戦"
  mos_the_civil_war_desc:0 "公国の王位は長兄が継承するというのがモスクワの伝統である。ヴァシーリー1世はこのことを知っていたが、モスクワの王位継承者にヴァシーリー2世を指名した。その結果、自国は二度にわたって内戦に見舞われた。ついには、王位を巡る宿敵ユーリー・ドミトリエヴィチは敗北した。しかし彼の息子、ドミトリー・シェミャーカは今なお王位を狙っている。この内戦を確実に終息させねばならない。"
  mos_the_civil_war_at:0 "§Yヴァシーリー2世§!はもはや§Y[Root.GetName]§!の[Root.Monarch.GetTitle]ではない"
@@ -4399,7 +4399,7 @@
  rus_pass_issues_in_the_senate_at:1 "§Y元老院§!改革が制定された状態でこのミッションを達成したとき："
  rus_pass_issues_in_the_senate_bt:1 "§Y元老院§!改革が制定されていない状態でこのミッションを達成したとき："
  rus_pass_issues_in_the_senate_ct:0 "従属国の総開発度が§Y100§!以上であり、独立欲求が§Y20%§!未満である。"
- rus_pass_issues_in_the_senate_tt:0 "§Y10§!の議題を通過させた(§Y[Root.issues_passed.GetValue]§!/§Y10§!)。"
+ rus_pass_issues_in_the_senate_tt:0 "§Y10§!の議題を通過させた（§Y[Root.issues_passed.GetValue]§!/§Y10§!）。"
  rus_most_holy_synod_title:0 "聖務会院"
  rus_most_holy_synod_desc:0 "教会は我々の国家の歴史の中で主要な役割を果たしてきたが、彼らの国家における立ち位置を見直す必要性がますます明白である。"
  rus_most_holy_synod_xx:1 "外交評判が§Y2§!以上である。\n　§Y[Root.Religion.GetGroupName]§!だが§Y[Root.Religion.GetName]§!ではない同盟国または従属国からの[Root.GetName]への信頼度が§Y75§!以上で評価が§Y150§!以上\n\n"
@@ -4422,8 +4422,8 @@
  rus_dissolve_the_streltsy_bt:1 "§Yストレリツィの確立§!改革が制定されていない状態でこのミッションを達成したとき："
  rus_reform_the_military_title:0 "軍隊の西洋化"
  rus_reform_the_military_desc:0 "我々の陸軍は既に多くの改革や発展を経ているが、頂点には未だ至っていない。異国の軍事顧問と古き良き規律によって、[Root.GetUsableName]の軍隊はどのライバルにも劣らない熾烈な戦いを繰り広げるだろう。"
- rus_reform_the_military_at:1 "陸戦または海戦で§Y40§!回勝利する(§Y[Root.GetNumWonBattles]/§Y40§!)"
- rus_reform_the_military_bt:1 "陸戦または海戦で§Y40§!回勝利する§Y0§!/§Y40§!)\n§Yこのカウントはミッション「ストレリツィの管理」が達成されてから開始されます§!"
+ rus_reform_the_military_at:1 "陸戦または海戦で§Y40§!回勝利する（§Y[Root.GetNumWonBattles]/§Y40§!）"
+ rus_reform_the_military_bt:1 "陸戦または海戦で§Y40§!回勝利する（§Y0§!/§Y40§!）\n§Yこのカウントはミッション「ストレリツィの管理」が達成されてから開始されます。§!"
  rus_control_fur_trade_title:0 "毛皮交易の支配"
  rus_control_fur_trade_desc:0 "毛皮、北方とシベリアの柔軟な黄金。良質な毛皮の需要は決して尽きることはない。毛皮交易の独占を確固たるものにする必要があるだろう。"
  rus_peters_reforms_title:0 "階級表"
@@ -4998,7 +4998,7 @@
  ave_shatter_frances_nobility_desc:0 "ようやくフランスは敗北を認め、[Root.GetUsableName][Root.Monarch.GetTitle]を唯一の容認君主として承認した。フランスの平民は真の[Root.Monarch.GetTitle]の前で跪く一方で、フランス貴族は受け入れを拒否している。自国の手はイングランド貴族で十分に忙しいのだから、フランス貴族は速やかに対処せねばならない。"
  ave_the_angevin_empire_title:1 "[Root.GetPreviewColorGBR]アンジュー王国[Root.GetPreviewColorGBR_end]"
  ave_the_angevin_empire_desc:0 "アンジュー王はフランス領の半分以上を支配し、繁栄と正義を自由に享受できるようにした。フランス王位を勝ち取ったことで、もう一度アンジューの称号を再請求する完全なる権利がある。"
- ave_the_angevin_empire_at:0 "§Y[Root.GetName]§!もしくはその従属国(もしくは従属国の従属国)が領有している"
+ ave_the_angevin_empire_at:0 "§Y[Root.GetName]§!もしくはその従属国（もしくは従属国の従属国）が領有している"
  ave_invade_italy_title:1 "[Root.GetPreviewColorGBR]アルプス峠の確保[Root.GetPreviewColorGBR_end]"
  ave_invade_italy_desc:0 "フランス地方を統一したので、アルプス峠が新たな東南部の国境となった。イタリア人はこの峠を保持しており、イタリア交易の富から自国を容易に遮断できる。自国のためにも峠を確保し、どんな公爵やドージェも勢力を拡大させないようにせねばならない。"
  ave_italian_domination_title:1 "[Root.GetPreviewColorGBR]イタリアでの治世[Root.GetPreviewColorGBR_end]"
@@ -5767,7 +5767,7 @@
  decadence.6.a:0 "賄賂だと？王の分け前はどこだ？"
  decadence.6.b:0 "これを続けさせてはならない！"
  decadence.7.t:0 "宗教的混沌"
- decadence.7.desc:0 "[Root.GetUsableName]内で宗教的緊張が高まっている。 異端者、異教徒、その他奇妙な儀式を執り行う者たちは、宮廷が指をくわえて見ている間にも、我が[Root.GovernmentName]の平和を脅かしている..."
+ decadence.7.desc:0 "[Root.GetUsableName]内で宗教的緊張が高まっている。異端者、異教徒、その他奇妙な儀式を執り行う者たちは、宮廷が指をくわえて見ている間にも、我が[Root.GovernmentName]の平和を脅かしている..."
  decadence.7.a:0 "彼らの好きにさせよ。彼らは誰にも危険を及ぼしていない。"
  decadence.7.b:0 "異教徒の脅威を終わらせよ。必要とあらば力ずくで。"
  decadence.8.t:0 "恩寵の喪失"
@@ -5789,7 +5789,7 @@
  jap_nanban_trade_title:0 "南蛮貿易"
  jap_nanban_trade_desc:0 "我が国への南蛮人の来訪により、貿易の重要性がはっきりと示された。我々の市場の機能を向上させることで、間違いなく我々に大きな利益がもたらされるだろう。"
  jap_conquer_south_china_title:0 "華南の征服"
- jap_conquer_south_china_desc:0 "華南は常に莫大な富の源泉であった。かの地を我々のものとすることで、活動範囲をこれまで以上に拡大できる。 "
+ jap_conquer_south_china_desc:0 "華南は常に莫大な富の源泉であった。かの地を我々のものとすることで、活動範囲をこれまで以上に拡大できる。"
  jap_maraka_kaikyou_title:0 "マラッカ海峡"
  jap_maraka_kaikyou_desc:0 "マラッカ海峡は商業が流れる要地である。その流れを支配する存在になれるよう、我らがかの地を手中に収めなければならない。"
  jap_edo_jidai_title:0 "江戸時代"
@@ -6430,7 +6430,7 @@
  gc_ara_occitania2_title:0 "オクシタニアへの侵略"
  gc_ara_occitania2_desc:0 "フランス王国と国土を接することは、多くの国にとって悩みの種である。彼らが万一侵略を決めたなら、我々の軍事的または外交的な努力が彼らを抑止するのに十分であることを決して確信することはできない。その代わりに、我々は彼らへ戦いを仕掛けねばならない！"
  dom_ara_remensa_war_title:0 "レメンス戦争"
- dom_ara_remensa_war_desc:0 "レメンサ農民は数世紀にわたる領主の酷使増加の後、 「レメンサ連合」として組織化し、カタルーニャ貴族に対して蜂起した。今、自国の責務は国を平和にし、農民と貴族間のこの紛争の傷を縫合することだ。"
+ dom_ara_remensa_war_desc:0 "レメンサ農民は数世紀にわたる領主の酷使増加の後、「レメンサ連合」として組織化し、カタルーニャ貴族に対して蜂起した。今、自国の責務は国を平和にし、農民と貴族間のこの紛争の傷を縫合することだ。"
  dom_ara_catalan_nobility_title:0 "カタルーニャ貴族"
  dom_ara_catalan_nobility_desc:0 "国をうまく平定したので、レメンス戦争の余波でカタルーニャ貴族の運命を決定せねばならない。"
  gc_ara_constantinople2_title:0 "世界が焦がれる都"
@@ -6677,7 +6677,7 @@
  num_of_completed_idea_groups_adm_tt:0 "§Y統治§!アイデアグループが完成している。"
  num_of_completed_idea_groups_dip_tt:0 "§Y外交§!アイデアグループが完成している。"
  num_of_completed_idea_groups_mil_tt:0 "§Y軍事§!アイデアグループが完成している。"
- NEEDS_TO_HAVE_SEIZED_LAND:0 "この§Yアパナージュ§!を併合するためには,1回以上§Y領地の没収§!をすることが必要です。"
+ NEEDS_TO_HAVE_SEIZED_LAND:0 "この§Yアパナージュ§!を併合するためには、1回以上§Y領地の接収§!をすることが必要です。"
  NUM_OF_AVAILABLE_ANNEXATIONS:0 "[This.can_annex_appanages_points.GetValue]"
  NUM_OF_SOLD_TITLES:0 "[This.sale_of_titles_counter.GetValue]"
  NUM_OF_DIETS_CALLED:0 "[This.summon_the_diet_counter.GetValue]"
@@ -6690,7 +6690,7 @@
  call_trade_protectorate_into_wars_tooltip:0 "保護国を自国の戦争に呼ぶ。"
  trade_protectorate_called_into_war:0 "彼らの戦争に自国が呼ばれた"
  FROM_MUST_HAVE_POSITIVE_OPINION_TT:0 "§R- §Y[From.GetName]§!は§Y[Root.GetName]§!の評価が§Y0§!より高くない。§!"
- rus_increase_absolute_rule_tt:0 "階級インタラクション§Y領地の没収§!を§Y10§!回以上実行している(§Y[Root.GetSeizeLandCounter]§!/§Y10§!)。"
+ rus_increase_absolute_rule_tt:0 "階級相互作用§Y領地の接収§!を§Y10§!回以上実行している（§Y[Root.GetSeizeLandCounter]§!/§Y10§!）。"
  gbr_allies_on_the_mainland_tt:1 "- §Y[Root.Capital.GetContinentName]§!に首都がある\n      - §Y[Root.GetName]§!に対して§Y150§!以上の評価を持つ\n      - §Y[POR.GetName]§!であるか、§Y200§!以上の総開発度を持つ"
  ave_colonize_america_tt:0 "§Y[Root.GetName] §!もしくはその従属国が§Y新世界§!において完全に植民地化された州を§Y10§!州以上領有する。"
  jap_tt_spread_christianity:0 "\nこれにより、この事件は鮮明に§Yキリスト教§!の結末へと向かうでしょう。"
