--- a/source/localisation/emperor_estates_l_english.yml
+++ b/source/localisation/emperor_estates_l_english.yml
@@ -154,7 +154,7 @@
  UNREST_NAMED:0 "$SOURCE$：$VALUE|-=$\n"
  estate_land_seized:0 "階級の土地の没収"
  ESTATES_SALE_OF_TITLES_DESC:0 "§Y直轄地の10%§!を§Y階級§!に売却します。"
- ESTATES_SEIZE_LAND_DESC:0 "§Y階級の土地の5%§!を接収し、§Y直轄領§!にします。"
+ ESTATES_SEIZE_LAND_DESC:0 "§Y階級の領土の5%§!を接収し、§Y直轄領§!にします。"
  ESTATES_SEIZE_LAND_UNREST_DESC:0 "開発度の階級の占有は§R+5§!の§Y不穏度§!を受け取り、最も影響力のある階級は愚かにもあなたに対して武器を取ります。"
  IS_NOT_MOST_POWERFUL_ESTATE:0 "$ESTATE$は最も強力な階級ではない。"
  IS_MOST_POWERFUL_ESTATE:0 "$ESTATE$は最も強力な階級である。"
@@ -174,7 +174,7 @@
  estate_privileges_and_agendas_events.2.desc:0 "[Root.GovernmentName]が国土に及ぼす支配力の弱さを解決すべく、[Root.GetName]階級は[Root.Monarch.GetTitle][Root.Monarch.GetName]に対して妥協案を提示してきた。支配力と引き換えに、階級は一定の自由を要求している……"
  estate_privileges_and_agendas_events.2.a:0 "率直に言うが、お前たちが国全体を売り払っていたときに何を期待していた？"
  estate_privileges_and_agendas_events.2.b:0 "ふっ、我々は自力で解決する…"
- seize_land_unavailable_from_privilege:0 "§R特権が有効である限り、土地の差し押さえは利用できません§!"
+ seize_land_unavailable_from_privilege:0 "§R特権が有効である限り、領地の接収は利用不可§!"
  estate_brahmins_statutory_rights:0 "階級の法的権利"
  estate_nobles_statutory_rights:0 "階級の法的権利"
  estate_burghers_statutory_rights:0 "階級の法的権利"
@@ -189,7 +189,7 @@
  ESTATE_UNHAPPY_EFFECTS:0 "この階級が不忠になると、以下の影響を及ぼします：\n$EFFECT$"
  sale_of_titles:0 "称号の売却"
  summon_the_diet:0 "議会の召集"
- seize_land:0 "領地の没収"
+ seize_land:0 "領地の接収"
  estate_unhappy_modifier:0 "不満な階級"
  COMPLETED_ESTATE_AGENDA_TITLE:0 "議題の完了"
  COMPLETED_ESTATE_AGENDA_DESC:0 "完了した議題$NAME|Y$は以下の効果を与えています：\n$EFFECT$"
@@ -1249,7 +1249,7 @@
  estate_jains_grant_liberties_desc:0 "[Root.GetJainsName]は我が国の少数派であるものの、金融の世界では非常に大きな力を持っている。彼らに幾分かの自由を与えることにより、忠誠を確保することができるだろう。"
  estate_maratha_subject_rights_desc:0 "[Root.GetUsableNameCap]は分権的な国家であり、遠隔地の州は[Root.Monarch.GetTitle]からかなりの独立性を持つ従属国により統治されている。この制度には利点もあるものの、王権の優位性を維持することが大きな課題となる。"
  estate_rajput_subject_rights_desc:0 "[Root.GetUsableNameCap]は分権的な国家であり、遠隔地の州は[Root.Monarch.GetTitle]からかなりの独立性を持つ従属国により統治されている。この制度には利点もあるものの、王権の優位性を維持することが大きな課題となる。"
- ESTATES_SEIZE_LAND_EXCEPTION_DESC:0 "§Y土地奪取を免除§!された階級は忠誠を喪失しません。"
+ ESTATES_SEIZE_LAND_EXCEPTION_DESC:0 "§Y領地の接収を免除§!された階級は忠誠度を喪失しません。"
  crown_land_level_10:0 "直轄地の所有権"
  brahmins_privilege_slots:0 "[Country.GetBrahminsName]階級の特権最大数"
  church_privilege_slots:0 "[Country.GetClergyName]階級の特権最大数"
