--- a/source/localisation/flavor_events_l_english.yml
+++ b/source/localisation/flavor_events_l_english.yml
@@ -1649,8 +1649,8 @@
  flavor_fra.EVTNAME9104:0 "百年戦争の終結"
  flavor_fra.EVTDESC9104:1 "ルイ11世は百年戦争の結果から恩恵を受けた。封建貴族の事実上の崩壊は、彼が王権の下でより強固にフランスを統一し、中産階級を促進し、彼らと連携することを可能にした。"
  flavor_fra.EVTOPTA3104:0 "より強力な国家を構築する時だ。"
- flavor_fra.EVTNAME3105:0 "ダンジューはナポリ王国の請求権を主張"
- flavor_fra.EVTDESC3105:2 "1442年、ルネ・ダンジューは、ナポリ王国の支配をトラスタマラ王朝に奪われた。彼は王冠を自身の手に戻すことはなかったが、ルネは人生においてナポリ王のスタイルを取り続けた。ルネは今、ダンジューの王国への請求権はますます筋の通らないものではなくなったと感じている。\nしかしナポリ王国には敵がいないわけではなく、現在、[Root.Monarch.GetName]は教皇の判断と、ルネ王と我々の王朝の婚姻関係を口実として引用することで[Root.Monarch.GetHerselfHimself]にナポリ王国を主張する機会がある。通常、これは非常に弱い主張と見なされるものだが、ナポリの支配者の不人気のために、これは見過ごされるかもしれない。"
+ flavor_fra.EVTNAME3105:0 "ナポリ王国に対するアンジュー家の請求権"
+ flavor_fra.EVTDESC3105:2 "1442年、ルネ・ダンジューは、ナポリ王国の支配をトラスタマラ王朝に奪われた。彼は終ぞ王冠を取り戻すことはなかったが、ルネは終生ナポリ王を名乗り続けた。ルネ亡き今、ヴァロワ＝アンジュー家の王国への請求権はますます取るに足らないものになりつつある。\nしかしナポリ王国は敵なしではないどころか、現在、[Root.Monarch.GetName]は教皇の判断と、ルネ王と我が王朝の婚姻関係を口実として引用することで[Root.Monarch.GetHerselfHimself]にナポリ王国を請求する機会を得た。通常、こうした口実は根拠薄弱と見なされがちだが、ナポリの支配者が不人気であることから、見過ごされるかもしれない。"
  flavor_fra.EVTOPTA3105:0 "我々が正当なものであることを主張しよう！"
  flavor_fra.EVTOPTB3105:0 "我々は永久に請求権を放棄しよう！"
  flavor_fra.EVTNAME3106:0 "国家がギルドの支配権を獲得"
