--- a/source/localisation/goose_1_35_l_english.yml
+++ b/source/localisation/goose_1_35_l_english.yml
@@ -107,7 +107,7 @@
  ONE_RANDOM_PROVINCE_TOOLTIP:0 "ランダム州で"
  PROVINCE_GROUP:0 "州グループ"
  EVERY_OWNED_OR_NON_TRIBUTARY_PROV:0 "全州を自国もしくは自国の朝貢国以外の従属国で領有している"
- FRONTIER_TOOLTIP:0 "$COUNTRY|Y$は$PROVINCE|Y$に植民地を建設しています。現在の人口は$AMOUNT|0$です。人口は毎月$MIN$ー$MAX$の間で増加します。"
+ FRONTIER_TOOLTIP:0 "$COUNTRY|Y$は$PROVINCE|Y$に植民地を建設しています。現在の人口は$AMOUNT|0$です。毎月$MIN$～$MAX$人増加します。"
  RETURN_CORE_COUNTRY_OFFDESC:0 "$RECIPIENT$に対し、同盟国への好意の証として$TAG$の中核州$PROV$を返還するよう要求します。これには好感度が$FAVOURS$かかります。"
  land_units_killed:1 "一会戦で殺された陸上ユニット"
  land_units_lost:1 "一会戦で失った陸上ユニット"
@@ -143,7 +143,7 @@
  has_slacken_on_delayed:0 ""
  GOVERNMENT_POWER_FROZEN:0 "固定されているため、毎月$NAME|Y$を得ることはありません。固定されていない場合$GAIN$変動します。"
  SUBJECT_INTERACTION_LIBERTY_DESIRE:0 "従属国の独立欲求は$VAL|0$%未満である必要がある。"
- SUBJECT_INTERACTION_COOLDOWN:0 "$DATE|Y$日経過するまでインタラクションが使用できません。"
+ SUBJECT_INTERACTION_COOLDOWN:0 "$DATE|Y$日経過するまで相互作用が使用できません。"
  IMPERIAL_AUTHORITY_MODIFIER_DESC:0 "さらに以下により$VALUE|1+%$が乗算されます："
  HRE_DISMANTLE_PRESTIGE:0 "自国に威信が$VAL|G1$与えられる。"
  ONLY_MANUFACTORIES:0 "工場"
