--- a/source/localisation/powers_and_ideas_l_english.yml
+++ b/source/localisation/powers_and_ideas_l_english.yml
@@ -5582,9 +5582,9 @@
  oda_rakuichi_rakuza_desc:0 "日本中で古き同業者組合「座」は様々な事業を阻害するほどの影響力を持つまでに成長した。また、私兵を持ち、我らの直接的な権威を侮辱している。奴らの独占を廃し、通行料や閉鎖的な港や都市を排除しよう。市場と同業者組合の自由化、楽市楽座は、座の影響に終止符を打ち、商業を活発にするだろう。"
  oda_tenka_fubu:0 "天下布武"
  oda_tenka_fubu_desc:0 "無秩序としか言いようがない世の中で、自領を安定させることで将来的な拡張のための強力な基盤を得た。日本の統一と平定を我が一族の使命としよう、天下統一は武力によってのみ成せるのだ。"
- oda_generals:0 "織田家の武将"
+ oda_generals:0 "織田の将"
  oda_generals_desc:0 "生まれや特権にこだわることが、幕府を弱体化させたのであり、自力で成り上がった強力な大名が各地に出現したことは、そうした考え方がいかに無用であるかを明確に証明している。この教訓を心に刻み、誰が我が軍の指揮官となるべきか、その指針を成功と技量としようではないか。急速な拡大には強い指導力が必要だ。"
- oda_azuchi_castle:0 "権勢ある要塞"
+ oda_azuchi_castle:0 "有力な根拠地"
  oda_azuchi_castle_desc:0 "日本は多くの意味で城の国であり、いたるところに城下町が発達している。強力な城を築くことで、政治的領域と軍事行動に欠かせない道の双方に影響を強く与えることができるのだ。この教訓は、心に刻み込まねばならない。朝廷から我々の家来に至るまで、城を通じて、我々の存在と力を意識させるのである。いついかなる時も、敵の城を減らし、要衝に築城することを優先せねばならない。"
  oda_triple_firing:0 "三段撃ち"
  oda_triple_firing_desc:0 "銃器の出現は、日本列島内での戦争を変革させ、これらの新しい武器の習得を通じ、どのような戦場も支配できるようなり、それは今後も続いていくであろう。連射速度を高めるため、鉄砲隊は隊列を組み、1人が発砲している間に他の2人が弾を込めるのである。"
@@ -5603,7 +5603,7 @@
  tkg_hatamoto_desc:0 "何千もの旗持ちである旗本は、我が主に直接奉公している。些細な土地を持つ彼らの運命は、我々と紐づいており、我が一族に対する忠誠心は、他所のどの大名のどの日和見の家臣達よりも強いのだ。"
  tkg_metsuke:0 "目付"
  tkg_metsuke_desc:0 "日本では、幕府の権威が失墜したことにより、各地の有力者が台頭した。しかし、古い社会構造では法の支配が保証されないため、社会のあちこちで腐敗が蔓延っている。安定を図るためにも、大名を監視する幕臣、目付を創設せねばならない。"
- tkg_matsudaira_branches:0 "松平分家"
+ tkg_matsudaira_branches:0 "松平庶流"
  tkg_matsudaira_branches_desc:0 "我が一族は元を辿れば、松平の一分家に過ぎない。我らが拡大するにつれ、他の分家筋を頼って、要塞や戦略的要地へ直接駐屯させることができるだろう。"
  tkg_toshogu:0 "東照宮"
  tkg_toshogu_desc:0 "我が一族の始祖を祀る神社を建造しよう。東照宮は日本史上最も壮麗な神社になるだろう。その存在は我が栄光ある系譜のみならず、伝統的な神道の価値観への信奉も思い起こさせるだろう。"
