--- a/source/localisation/watersnake_1_36_l_english.yml
+++ b/source/localisation/watersnake_1_36_l_english.yml
@@ -9,8 +9,8 @@
  can_estate_interaction_instant:0 "§Y階級の相互作用が利用可能§!"
  can_estate_interaction_delayed:0 "以下の階級の相互作用が利用可能：\n$LIST|Y$"
  COUNTRIES_CAUSING_CALL_TO_PEACE:0 "以下の国で戦争疲弊が高まりつつある：\n$LIST|Y$"
- can_estate_seize_land_instant:0 "§Y土地の没収が可能§!"
- can_estate_seize_land_delayed:0 "領地の中央集権化のために階級から土地を没収することができます。"
+ can_estate_seize_land_instant:0 "§Y領地の接収が可能§!"
+ can_estate_seize_land_delayed:0 "中央集権化のために階級から領地を接収することができます。"
  can_estate_call_diet_instant:0 "§Y議会の召集が可能§!"
  can_estate_call_diet_delayed:0 "階級からの提案を受理するために議会を召集することができます。"
  can_estate_sell_land_instant:0 "§Y称号の売却が可能§!"
