--- a/source/localisation/nw2_l_english.yml
+++ b/source/localisation/nw2_l_english.yml
@@ -110,7 +110,7 @@
  religious_events.16.a:0 "[Root.Monarch.GetName]は退位する。"
  religious_events.16.b:0 "我らが異教徒に屈することなどない！"
  religious_events.17.t:0 "[From.GetName]のクーデター"
- religious_events.17.d:1 "[From.GetName]のヒンドゥー王朝の台頭により、この地域のムスリム支配階層は激怒しています。[From.Monarch.Dynasty.GetName]のムスリムへ改宗した者を即位させれば、王朝の権力を維持しながら、完全な反乱を避けることができます。"
+ religious_events.17.d:1 "[From.GetName]でのヒンドゥー王朝の台頭は、この地域のムスリム支配階層を激怒させました。王朝の権力を維持しながら完全な反乱を避けるため、ムスリムへ改宗した[From.Monarch.Dynasty.GetName]が即位することになった。"
  religious_events.17.a:0 "これは不法だ！"
  religious_events.17.b:0 "素晴らしい。"
  religious_events.18.t:0 "[Root.GetName]がキリスト教に改宗する"
