--- a/source/localisation/text_l_english.yml
+++ b/source/localisation/text_l_english.yml
@@ -1523,7 +1523,7 @@
  MIL_VIEW_NAVAL_SUPPORT:0 "我々は現在、合計で§Y$NO$§!の海上ユニットをペナルティ無しに支えることができます。"
  MIL_VIEW_LAND_SUPPORT_OTHERS:0 "彼らは現在、合計で§Y$NO$§!の陸上ユニットをペナルティ無しに支えることができます。"
  MIL_VIEW_NAVAL_SUPPORT_OTHERS:0 "彼らは現在、合計で§Y$NO$§!の海上ユニットをペナルティ無しに支えることができます。"
- COUNTRY_MORALE_TECH:0 "技術から："
+ COUNTRY_MORALE_TECH:0 "技術から"
  CVIEW_COLONY:0 "植民地に$SIZE$の入植者。"
  DAYS:0 "日"
  NOTOWN:0 "この州は既に取り押さえられています。"
