Extract files from game [ci skip]

--- a/extract/localisation/leviathan_l_english.yml
+++ b/extract/localisation/leviathan_l_english.yml
@@ -626,9 +626,11 @@
  blessing_manthras:0 "Manthras"
  blessing_dakhma:0 "Dakhma"
  HOLY_SITE_421_DESC:1 "The Ateshgah of Baku is one of the most important Fire Temples of the Zoroastrianism. While technically in Surakhani, it is binded to the city of Baku since antiquity, as it was also called 'The Fires of Baguan' in reference to the city of Baku. The fire emerges directly from the surface and its flames burn perpetually, with ferocious strength. It is said that some 'fire worshipers' still live in the vicinity."
+ HOLY_SITE_4336_DESC:0 "The Ateshgah of Baku is one of the most important Fire Temples of the Zoroastrianism. While technically in Surakhani, it is binded to the city of Baku since antiquity, as it was also called 'The Fires of Baguan' in reference to the city of Baku. The fire emerges directly from the surface and its flames burn perpetually, with ferocious strength. It is said that some 'fire worshipers' still live in the vicinity."
  HOLY_SITE_441_DESC:1 "It is said that the prophet Zaratushtra was born in Khorezm and therefore the region and, especially, the ancient city of Khiva, center of it, are considered sacred as the motherland of Zoroastrianism. The islamic invasions have direly harmed our religion in the region, but pockets of followers resist and even among the muslims in the region, several Zoroastrian traditions survive."
  HOLY_SITE_2223_DESC:2 "The Atash Bahram declared to be the fire of the priest class, called Adur Farnbag, burns in the Larestan region, close to the city of Karyan. It is the most venerated among the three Fires of Victory, the others two being named Adur Gushnasp devoted to warriors and Adur Burzen-Mihr devoted to farmers."
  HOLY_SITE_2235_DESC:1 "In the Mount Revand of Khorasan, close to the city of Kashmar, the Adur Burzen-Mihr, one of the three Atash Bahram or Fires of Victory, burns associated to the farmer class. A major center of pilgrimage during the ancient times, its significance for the Zoroastrians has not faded away."
+ HOLY_SITE_2212_DESC:0 "When the Khorezm fell to the muslim forces, some worshipers fled to India and founded a community in Sanjan, carrying a sacred fire with them. A silsila, or traditional link, was formed between this new community and the original one in Persia from where the name Sanjan came from. Since 1297, the fire has moved around, first to the Bahrot Caves, then to the village of Bansda and finally to Navsari."
  HOLY_SITE_4430_DESC:1 "When the Khorezm fell to the muslim forces, some worshipers fled to India and founded a community in Sanjan, carrying a sacred fire with them. A silsila, or traditional link, was formed between this new community and the original one in Persia from where the name Sanjan came from. Since 1297, the fire has moved around, first to the Bahrot Caves, then to the village of Bansda and finally to Navsari."
  pick_coptic_blessing:0 "Pick Blessing"
  pick_zoroastrian_blessing:0 "Pick Ritual"
@@ -1848,4 +1850,9 @@
  province_is_or_accepts_inti_tt:0 "The Religion of §Y[Root.GetName]§! is §YInti§! and is either the State or the Syncretic Religion of the owner."
  hagia_sophia_tt:0 "The Religion of §Y[Root.GetName]§! is either §YCatholic§!, §YOrthodox§! or §YCoptic§! or part of the §YMuslim§! religion group and is either the State or the Syncretic Religion of the owner."
  mount_fuji_tt:0 "The Religion of §Y[Root.GetName]§! is either §YShinto§! or §YMahayana§! and is either the State, the Syncretic or the Harmonized Religion of the owner."
+
+ #Misc Loc
  
+ 
+ pegu_subject_ayu_tt:0 "\nIf we complete this mission while §YAyutthaya§! is a non-tributary subject, the following will also happen:"
+ pegu_subject_lna_tt:0 "\nIf we complete this mission while §YLan Na§! is a non-tributary subject, the following will also happen:"
