--- a/extract/localisation/achievements_l_english.yml
+++ b/extract/localisation/achievements_l_english.yml
@@ -74,7 +74,7 @@
  NEW_ACHIEVEMENT_6_6_NAME:0 "The Chrysanthemum Throne"
  NEW_ACHIEVEMENT_6_6_DESC:0 "Unite Japan as a Daimyo."
  NEW_ACHIEVEMENT_6_7_NAME:0 "Basileus"
- NEW_ACHIEVEMENT_6_7_DESC:0 "As Byzantium, restore the Roman Empire."
+ NEW_ACHIEVEMENT_6_7_DESC:1 "As Byzantium, restore the borders of the Eastern Roman Empire in the Balkans and Anatolia."
  NEW_ACHIEVEMENT_6_8_NAME:0 "Aggressive Expander"
  NEW_ACHIEVEMENT_6_8_DESC:0 "Own 200 provinces."
  NEW_ACHIEVEMENT_6_9_NAME:0 "A Kaiser not just in name"
@@ -734,6 +734,6 @@
  NEW_ACHIEVEMENT_112_NAME:0 "The Last Crusade"
  NEW_ACHIEVEMENT_112_DESC:0 "Starting as Byzantium, control Venezia, and make sure that the country Venice doesn't exist."
  NEW_ACHIEVEMENT_113_NAME:0 "Legacy of Saint George"
- NEW_ACHIEVEMENT_113_DESC:0 "As Georgia, have Genoa, Aragon, England, and Trier as vassals, while controlling Wales."
+ NEW_ACHIEVEMENT_113_DESC:1 "As Georgia, have as vassals Genoa, Aragon, England and Trier or their successors, and control Wales."
  NEW_ACHIEVEMENT_114_NAME:0 "The Zoro-Austrians"
  NEW_ACHIEVEMENT_114_DESC:0 "Starting as Austria, convert to Zoroastrianism, and complete the Persian Zoroastrian missions."
