--- a/source/localisation/goose_1_36_l_english.yml
+++ b/source/localisation/goose_1_36_l_english.yml
@@ -145,3 +145,4 @@
  CULT_REMOVED_EFFECT:0 "このカルトを外した場合の影響：\n$EFFECT$"
  HEGEMONY_GAINED_EFFECT:0 "この覇権を獲得した場合の影響：\n$EFFECT$"
  HEGEMONY_LOST_EFFECT:0 "この覇権を喪失した場合の影響：\n$EFFECT$"
+ ADVISOR_MORE_EXPENSIVE:0 "This advisor is $AMT$ more expensive for your country to employ."
